--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <h1>Pesquisa estilo Google com ChatGPT</h1>
+  <h1>ChatGPT para nokias</h1>
   <input type="text" id="pergunta" placeholder="Digite sua pesquisa aqui" />
   <button onclick="pesquisar()">Pesquisar</button>
   
