--- a/index.html
+++ b/index.html
@@ -2,51 +2,52 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Noobdye Search</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Pesquisa ChatGPT</title>
   <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      padding: 50px;
-    }
-    input, button {
-      padding: 10px;
-      font-size: 16px;
-      margin: 5px;
-    }
-    #resposta {
-      margin-top: 30px;
-      white-space: pre-line;
-    }
+    body { font-family: Arial, sans-serif; padding: 20px; max-width: 600px; margin: auto; }
+    textarea { width: 100%; height: 100px; }
+    button { margin-top: 10px; padding: 10px 20px; }
+    #resultado { margin-top: 20px; white-space: pre-wrap; background: #f0f0f0; padding: 10px; border-radius: 5px; }
   </style>
 </head>
 <body>
-  <h1>Noobdye Search</h1>
-  <input type="text" id="pergunta" placeholder="Digite sua pergunta..."/>
-  <button onclick="pesquisar()">Pesquisar</button>
-  <div id="resposta"></div>
+  <h1>Pesquisar com ChatGPT</h1>
+  <textarea id="prompt" placeholder="Digite sua pergunta aqui..."></textarea><br />
+  <button id="btnEnviar">Enviar</button>
+
+  <div id="resultado"></div>
 
   <script>
-    async function pesquisar() {
-      const pergunta = document.getElementById('pergunta').value;
-      const respostaDiv = document.getElementById('resposta');
-      respostaDiv.innerHTML = "Carregando...";
+    document.getElementById("btnEnviar").addEventListener("click", async () => {
+      const prompt = document.getElementById("prompt").value.trim();
+      const resultadoDiv = document.getElementById("resultado");
+      resultadoDiv.textContent = "Carregando...";
 
-      const res = await fetch('/api/chat', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ prompt: pergunta })
-      });
-
-      const data = await res.json();
-
-      if (res.ok) {
-        respostaDiv.innerText = data.message;
-      } else {
-        respostaDiv.innerText = "Erro: " + (data.error?.message || "Erro desconhecido");
+      if (!prompt) {
+        resultadoDiv.textContent = "Por favor, digite uma pergunta.";
+        return;
       }
-    }
+
+      try {
+        const res = await fetch("/api/bate-papo", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ prompt }),
+        });
+
+        if (!res.ok) {
+          const err = await res.json();
+          resultadoDiv.textContent = "Erro: " + (err.error?.message || JSON.stringify(err));
+          return;
+        }
+
+        const data = await res.json();
+        resultadoDiv.textContent = data.message;
+      } catch (e) {
+        resultadoDiv.textContent = "Erro na requisição: " + e.message;
+      }
+    });
   </script>
 </body>
 </html>
